Fix text alignment in details view

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -45,9 +45,14 @@ i.small.ion-shuffle:before {
 	font-weight: bold;
 }
 
-.left-15 {
+.indent-4 {
 	position: absolute;
-	padding-left: 15%;
+	padding-left: 4em;
+}
+
+.indent-detail {
+	position: absolute;
+	padding-left: 5.5em;
 }
 
 .v-align-middle {
